--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,8 @@ name: coupons # yml文件名https://blog.csdn.net/qq_44732432/article/details/12
  
 on:
   push:
-    branches:
-      - main
-  schedule:   
-    - cron: '0 9 * * *'   # 定时运行的时间，国际标准时间，北京时间要+8
- 
+  schedule:
+    - cron: "0 0,6,12,18 * * *" 
 jobs:
   run-coupons: # 任务名
     runs-on: ubuntu-latest
